add auth header requirement
