# src/lib/routes/points/get_by_id.rs
@@ -19,6 +19,9 @@ use rocket::{serde::json::Json, State};
         (status = 500, description = "Internal Server Error"),
     ),
     tag = "points",
+    params(
+        ("Authorization", header, description = "Valid JWT with user id in allowed list"),
+    ),
 )]
 #[get("/points/<account_id>?<store>")]
 pub async fn get_points_by_id(
