# src/lib/routes/points/get_points.rs
@@ -13,6 +13,9 @@ use rocket::{serde::json::Json, State};
         (status = 500, description = "Internal Server Error"),
     ),
     tag = "points",
+    params(
+        ("Authorization", header, description = "Valid JWT with user id in allowed list"),
+    ),
 )]
 #[get("/points")]
 pub async fn get_points(
